Bug 595375: Fail brush creation when bitmap creation fails. r=jrmuizel